# hangewubi

./: .gitignore  Cargo.toml  LICENSE  PRD.md  build-all.sh  ci-local.sh  ci-watch.sh  com.hangewubi.ci-watch.plist  todo_list.md
.github/workflows/: ci.yml  deploy-website.yml
.wrangler/cache/: pages.json  wrangler-account.json
assets/icon-prompts/: prompts.md
data/: pinyin.txt
docs/: index.html  privacy.html
docs/downloads/: HangeWubi-0.1.0.dmg
include/: fungewubi.h  hangewubi.h
platform/android/: README.md  build.sh  settings.gradle.kts
platform/android/app/: build.gradle.kts  proguard-rules.pro
platform/android/app/src/main/jni/: CMakeLists.txt  hangewubi_jni.c
platform/ios/: build.sh  project.yml
platform/ios/HangeWubi/: AppDelegate.swift  Info.plist  MainViewController.swift  SceneDelegate.swift  SettingsViewController.swift
platform/ios/HangeWubi.xcodeproj/: project.pbxproj
platform/ios/HangeWubiKeyboard/: BridgingHeader.h  CandidateBarView.swift  HangeWubiKeyboard.entitlements  Info.plist  KeyPreviewView.swift  KeyboardView.swift  KeyboardViewController.swift
platform/linux/: README.md  build.sh  ibus-engine-hangewubi.c  ibus-fungewubi.xml  ibus-hangewubi.xml  install.sh
platform/macos/: AppIcon.icns  BridgingHeader.h  Info.plist  InputController.swift  build.sh  main.swift
platform/macos/en.lproj/: InfoPlist.strings
platform/windows/: README.md  build.bat  hangewubi_tsf.def  install.bat  uninstall.bat
src/: config.rs  dict.rs  engine.rs  ffi.rs  lib.rs  punctuation.rs  trie.rs  user_dict.rs
tests/: integration_test.rs
(+32 files in other folders)
