[package]
name = "hangewubi"
version = "0.1.0"
edition = "2024"
description = "函戈五笔 - 高性能五笔输入法引擎"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "hangewubi-cli"
path = "src/bin/cli.rs"
